--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
 .App {
-  background-color: red;
-}
-
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 200px;
+  margin-left: 0px;
+
 }
+
+
+
+
+
 
 
 
