--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,24 @@
   padding: 0;
 }
 
-
-.App {
+ .App {
   align-content: center;
   justify-content: center;
-  margin-top: 200px;
-  margin-left: 0px;
+  margin-left: 500px;
+  margin-top: 300px;
 
+
+} 
+
+.input{
+  margin: 10px;
+  width: 400px;
+  height: 30px;
+  text-align: center;
+  justify-content: center;
+  border-radius: 10px ;
+  font-size: large;
+  
 }
 
 
